--- a/focus-welfare.html
+++ b/focus-welfare.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Petrusino | Cosa è </title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
         <meta name="author" content="Ondata">
@@ -37,9 +37,9 @@
 
 
     <script type="text/javascript" src="./js/ga.js"></script>
-    
+    <!--
     <link href="https://zapier.com/engine/rss/43663/p2" rel="alternate" type="application/rss+xml" title="PETRUSINO: il feed per rimanere aggiornati sulle nuove risorese inserite" />
-
+    -->
   </head>
 
   <body>
@@ -59,11 +59,12 @@
         <div class="container">
           <ul class="nav navbar-nav">
            <li >
-            <a href="./index.html">Home</a>
+            <a href="./">Home</a>
           </li>
           <li class="active">
-            <a href="./cosa.html" >Cosa è</a>
-          </li>							
+            <a href="./focus-welfare.html" >Welfare e diritti</a>
+          </li>
+          <!--
           <li>
             <a href="./proponi.html">Proponi</a>
           </li>
@@ -78,6 +79,7 @@
          <li>
           <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org</a>
         </li>
+        -->
         </ul>
         </div>
     </div>
@@ -88,8 +90,11 @@
  
  <div id="main" class="container">
     <div class="jumbotron">
-    <div class="page-header"><h1>La controfinanziaria</h1></div><br>
-    <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
+    <div class="page-header"><h1>Welfare e diritti</h1></div><br>
+    <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero.
+    La sanità pubblica va difesa: per ridurre i ticket sanitari e rafforzare la medicina territoriale servirebbe 1 miliardo recuperabile rivedendo le convenzioni con le strutture sanitarie private. 
+    Per promuovere le politiche di genere sono fondamentali provvedimenti come l’assegno di maternità universale (900 milioni), incentivi nei settori della formazione tecnico-scientifica delle donne (<mark>275,1 milioni</mark>) e, visto il pericoloso aumento della violenza sulle donne, un finanziamento per nuovi centri antiviolenza (<mark>50 milioni</mark>). 
+L’ampliamento degli interventi di inclusione sociale e lavorativa dei cittadini stranieri (<mark>60,9 milioni</mark>), l’abolizione della tassa di soggiorno (<mark>26 milioni</mark>), il rafforzamento del sistema nazionale di lotta contro le discriminazioni e il razzismo (30 milioni) e il varo di un piano nazionale di smantellamento dei “campi nomadi” potrebbero arginare, se accompagnati da un rafforzamento delle politiche di welfare generali, l’ondata di razzismo che sta travolgendo di nuovo il nostro paese.</p>
     </div>
  </div>
     <div id="macrocategorie" class="container">
