--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Petrusino | Cosa è </title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Petrusino &egrave; un catalogo multitematico di siti web, applicazioni per dispositivi mobili, mappe online, servizi web e infografiche.">
+  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="OpenDataSicilia">
 
-  <meta property="og:image" content="http://petrusino.opendatasicilia.it/img/share.jpg" />
-  <meta property="og:title" content="Petrusino, ... perché certi siti, apps, mappe, servizi sono un po' come il prezzemolo e non è facili distinguerli ..." />
+  <meta property="og:image" content="http://ondata.github.io/sbilanciamoci-manovra2016/images/bgsbil2.jpg" />
+  <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
 
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
@@ -59,12 +59,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
           <ul class="nav navbar-nav">
-           <li >
+           <li class="active">
             <a href="./index.html">Home</a>
           </li>
-          <li class="active">
-            <a href="./cosa.html" >Cosa è</a>
-          </li>							
+          <li>
+            <a href="./focus-welfare.html" >Welfare e diritti</a>
+          </li>
+          <!--
           <li>
             <a href="./proponi.html">Proponi</a>
           </li>
@@ -74,6 +75,7 @@
           <li>
             <a href="./open.html">Open</a>
           </li>
+          -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
