--- a/focus-welfare.html
+++ b/focus-welfare.html
@@ -35,6 +35,14 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+
 
     <script type="text/javascript" src="./js/ga.js"></script>
     <!--
@@ -90,7 +98,13 @@
  
  <div id="main" class="container">
     <div class="jumbotron">
-    <div class="page-header"><h1>Welfare e diritti</h1></div><br>
+    <br>
+    <div class="page-header"><h1>
+                        <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                        </span> 
+                        Welfare e diritti</h1></div><br>
     <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero.
     La sanità pubblica va difesa: per ridurre i ticket sanitari e rafforzare la medicina territoriale servirebbe 1 miliardo recuperabile rivedendo le convenzioni con le strutture sanitarie private. 
     Per promuovere le politiche di genere sono fondamentali provvedimenti come l’assegno di maternità universale (900 milioni), incentivi nei settori della formazione tecnico-scientifica delle donne (<mark>275,1 milioni</mark>) e, visto il pericoloso aumento della violenza sulle donne, un finanziamento per nuovi centri antiviolenza (<mark>50 milioni</mark>). 
