--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 
+        <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
 
     <script type="text/javascript" src="./js/ga.js"></script>
     
@@ -45,8 +52,7 @@
 
   <body>
     <div class="row clearfix">
-     <div class="container">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
           <!--
@@ -79,7 +85,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org</a>
+          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>
         </li>
         </ul>
         </div>
@@ -109,40 +115,62 @@
                 <p> Suddivisa in <mark>sette</mark> aree tematiche, ecco la <strong>ControManovra 2016</strong> di Sbilanciamoci.
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Fisco e Finanza</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e Finanza</button>
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Lavoro e Reddito</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-briefcase fa-stack-1x fa-inverse"></i></span>
+                Lavoro e Reddito</button>
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Cultura e Conoscenza</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i></span>Cultura e Conoscenza</button>
             </div>
         </div>
         <br>
         <div class="row">        
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Ambiente e sviluppo sostenibile</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-cloud fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</button>
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Welfare e diritti</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-users fa-stack-1x fa-inverse"></i></span>
+                Welfare e diritti</button>
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Cooperazine, pace, disarmo</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-share-alt fa-stack-1x fa-inverse"></i></span>Cooperazine, pace, disarmo</button>
             </div>
             <div class="col-md-3 column">
-                <button type="button" class="btn btn-danger btn-lg">Altreconomia</button>
+                <button type="button" class="btn btn-default btn-lg">
+                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</button>
             </div>
         </div>
     </div>
     <br>
     <div id="approfondimenti" class="row">
         <div class="row">
-        <div class="col-md-6 column"><h2>infografiche</h2>
+        <div class="col-md-6 column"><h1>
+        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
+        <h2>Dati e grafici</h2>
         </div>
-        <div class="col-md-6 column"><h2>contesto</h2>
+        <div class="col-md-6 column"><h1>
+        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
+        <h2>Il contesto</h2>
         </div>
         </div>
     </div>
+    <div id="scarica" class="container">
+        <div class="row">
+        <div class="col-md-12 column"><h1>
+        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-download fa-stack-1x fa-inverse"></i></span></h1>
+        <h2>Scarica il rapporto completo</h2>
+        </div>
+        </div>
+    </div>
+
     <br>
 </div>		
 
