--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
            <li class="active">
             <a href="./index.html">Home</a>
           </li>
-          <li>
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
+          <li><span>>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">Capitoli di spesa
+          <li class="dropdown-header">  <a href="./focus-welfare.html" >Welfare e diritti</a></li>
+          </ul></span>
           </li>
           <!--
           <li>
@@ -116,57 +118,61 @@
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e Finanza</button>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e Finanza</button>
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-briefcase fa-stack-1x fa-inverse"></i></span>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-briefcase fa-stack-1x fa-inverse"></i></span>
                 Lavoro e Reddito</button>
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i></span>Cultura e Conoscenza</button>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i></span>Cultura e Conoscenza</button>
             </div>
         </div>
         <br>
         <div class="row">        
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-cloud fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</button>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-cloud fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</button>
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-users fa-stack-1x fa-inverse"></i></span>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-users fa-stack-1x fa-inverse"></i></span>
                 Welfare e diritti</button>
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-share-alt fa-stack-1x fa-inverse"></i></span>Cooperazine, pace, disarmo</button>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-share-alt fa-stack-1x fa-inverse"></i></span>Cooperazine, pace, disarmo</button>
             </div>
             <div class="col-md-3 column">
                 <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</button>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</button>
             </div>
         </div>
     </div>
     <br>
     <div id="approfondimenti" class="row">
         <div class="row">
+        <br>
         <div class="col-md-6 column"><h1>
-        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
+        <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
         <h2>Dati e grafici</h2>
         </div>
         <div class="col-md-6 column"><h1>
-        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
+        <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
         <h2>Il contesto</h2>
+        <br>
         </div>
         </div>
     </div>
     <div id="scarica" class="container">
         <div class="row">
+        <br>
         <div class="col-md-12 column"><h1>
-        <span class="fa-stack fa-4x fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-download fa-stack-1x fa-inverse"></i></span></h1>
+        <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-download fa-stack-1x fa-inverse"></i></span></h1>
         <h2>Scarica il rapporto completo</h2>
+        <br>
         </div>
         </div>
     </div>
