--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
            <li class="active">
             <a href="./index.html">Home</a>
           </li>
-          <li><span>>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">Capitoli di spesa
-          <li class="dropdown-header">  <a href="./focus-welfare.html" >Welfare e diritti</a></li>
-          </ul></span>
+          <li>
+            <a href="./focus-welfare.html" >Welfare e diritti</a>
           </li>
           <!--
           <li>
