fixing slogan-title

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>
+          <!--<a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>-->
         </li>
         </ul>
         </div>
