--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row clearfix">
      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
+          <a class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> 
           <!--
           <a class="navbar-brand logo" href="./index.html">
           <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
@@ -85,7 +85,10 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <!--<a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>-->
+          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org 
+          <!--
+          <!--<img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" />
+          --></a>
         </li>
         </ul>
         </div>
@@ -94,58 +97,55 @@
   </nav>
 </div>
 </div>
-
- <div id="intro" class="container">
-   <div class="row">
-    <div class="slogan">
-     <h1>Rapporto Sbilanciomoci 2016</h1>
-     <h3>Come usare la spesa pubblica per i diritti, la pace e l'ambiente</h3>
-    </div>
-   </div>
- </div>
- <div id="main" class="container">
-    <div class="jumbotron">
-    <div class="page-header"><h1>La controfinanziaria</h1></div><br>
-    <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
-    </div>
- </div>
-    <div id="macrocategorie" class="container">
+<div class="row">
+    <div id="intro" class="container">
         <div class="row">
-            <div class="col-md-3 column">
-                <p> Suddivisa in <mark>sette</mark> aree tematiche, ecco la <strong>ControManovra 2016</strong> di Sbilanciamoci.
-            </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e Finanza</button>
-            </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-briefcase fa-stack-1x fa-inverse"></i></span>
-                Lavoro e Reddito</button>
-            </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i></span>Cultura e Conoscenza</button>
+            <div class="slogan">
+            <h1>Rapporto Sbilanciomoci 2016</h1>
+            <h3>Come usare la spesa pubblica per i diritti, la pace e l'ambiente</h3>
             </div>
         </div>
-        <br>
-        <div class="row">        
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-cloud fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</button>
+    </div>
+    <div id="main" class="container">
+        <div class="jumbotron">
+        <div class="page-header"><h1>La controfinanziaria</h1></div><br>
+        <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
+        </div>
+    </div>
+    <div id="macrocategorie" class="container">
+        <div class="row">
+            <div class="col-md-6 column">
+                <p class="lead"> Suddivisa in <mark>sette</mark> aree tematiche, ecco la <strong>ControManovra 2016</strong> di Sbilanciamoci.
             </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e Finanza</a>
+            </div>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-briefcase fa-stack-1x fa-inverse"></i></span>
+                Lavoro e Reddito</a>
+            </div>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i></span>Cultura e Conoscenza</a>
+            </div>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-cloud fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</a>
+            </div>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg" href="/focus-welfare.html">
                 <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-users fa-stack-1x fa-inverse"></i></span>
-                Welfare e diritti</button>
+                Welfare e diritti</a>
             </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-share-alt fa-stack-1x fa-inverse"></i></span>Cooperazine, pace, disarmo</button>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-share-alt fa-stack-1x fa-inverse"></i></span>Cooperazione, pace, disarmo</a>
             </div>
-            <div class="col-md-3 column">
-                <button type="button" class="btn btn-default btn-lg">
-                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</button>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg">
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</a>
             </div>
         </div>
     </div>
@@ -174,7 +174,6 @@
         </div>
         </div>
     </div>
-
     <br>
 </div>		
 
