fissato errore nel titolo

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div id="intro" class="container">
         <div class="row">
             <div class="slogan">
-            <h1>Rapporto Sbilanciomoci 2016</h1>
+            <h1>Rapporto Sbilanciamoci 2016</h1>
             <h3>Come usare la spesa pubblica per i diritti, la pace e l'ambiente</h3>
             </div>
         </div>
