fixing div in hp

--- a/index.html
+++ b/index.html
@@ -51,26 +51,27 @@
   </head>
 
   <body>
-    <div class="row clearfix">
+    
      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-          <a class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> 
-          <!--
-          <a class="navbar-brand logo" href="./index.html">
-          <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
-          </a>
-          -->
-        </div>
+        <div class="row clearfix">
+            <div class="navbar-header">
+            <a class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> 
+            <!--
+            <a class="navbar-brand logo" href="./index.html">
+            <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
+            </a>
+            -->
+            </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <div class="container">
-          <ul class="nav navbar-nav">
-           <li class="active">
-            <a href="./index.html">Home</a>
-          </li>
-          <li>
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
-          </li>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./focus-welfare.html" >Welfare e diritti</a>
+                    </li>
           <!--
           <li>
             <a href="./proponi.html">Proponi</a>
@@ -95,25 +96,21 @@
     </div>
 
   </nav>
-</div>
-</div>
-<div class="row">
+
     <div id="intro" class="container">
-        <div class="row">
             <div class="slogan">
             <h1>Rapporto Sbilanciamoci 2016</h1>
             <h3>Come usare la spesa pubblica per i diritti, la pace e l'ambiente</h3>
             </div>
-        </div>
     </div>
     <div id="main" class="container">
         <div class="jumbotron">
-        <div class="page-header"><h1>La controfinanziaria</h1></div><br>
+        <div class="page-header"><h1>La controfinanziaria</h1>
+        </div><br>
         <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
         </div>
     </div>
     <div id="macrocategorie" class="container">
-        <div class="row">
             <div class="col-md-6 column">
                 <p class="lead"> Suddivisa in <mark>sette</mark> aree tematiche, ecco la <strong>ControManovra 2016</strong> di Sbilanciamoci.
             </div>
@@ -147,25 +144,21 @@
                 <a class="btn btn-default btn-lg">
                 <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-sitemap fa-stack-1x fa-inverse"></i></span>Altreconomia</a>
             </div>
-        </div>
     </div>
     <br>
-    <div id="approfondimenti" class="row">
-        <div class="row">
-        <br>
-        <div class="col-md-6 column"><h1>
-        <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
-        <h2>Dati e grafici</h2>
-        </div>
-        <div class="col-md-6 column"><h1>
-        <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
-        <h2>Il contesto</h2>
-        <br>
-        </div>
-        </div>
+    <div id="approfondimenti" class="container">
+            <br>
+            <div class="col-md-6 column"><h1>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
+                <h2>Dati e grafici</h2>
+            </div>
+            <div class="col-md-6 column"><h1>
+                <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
+                <h2>Il contesto</h2>
+                <br>
+            </div>
     </div>
     <div id="scarica" class="container">
-        <div class="row">
         <br>
         <div class="col-md-12 column"><h1>
         <span class="fa-stack fa-align-left"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-download fa-stack-1x fa-inverse"></i></span></h1>
