--- a/focus-welfare.html
+++ b/focus-welfare.html
@@ -140,8 +140,8 @@
             <div ex:role="exhibit-view" 
             ex:viewClass="Exhibit.TabularView"  
             ex:label="Table"  
-            ex:columns=".label,.label"  
-            ex:columnLabels="Nome,Dettagli" 
+            ex:columns=".Sottocategoria,.label,.Entrate,.Spese"  
+            ex:columnLabels="Categoria,Proposte,Entrate (mln di €),Uscite (mln di €)"
             ex:columnFormats="list,list"
             ex:sortColumn="0"
             ex:sortAscending="true"
@@ -150,8 +150,10 @@
               <div class="table-responsive">
                 <table class="table" ex:class-content=".territorio">
                   <tr>
-                    <td><span ex:content=".label"></span></td>
-                    <td><a href="javascript:void(0);" ex:onmouseover-subcontent="Tip('<img src=http://lorempixel.com/400/200/technics/><br><strong>Sottocategoria: </strong>{{.Sottocategoria}}')" onmouseout="UnTip()"><span ex:content=".label"><i class="fa fa-info"></i></a></td>
+                    <td><span ex:content=".Sottocategoria"></span></td>
+                    <td><a href="javascript:void(0);" ex:onmouseover-subcontent="Tip('<strong>Descrizione: </strong>{{.Descrizione}}')" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td><!-- Il tooltip compare al click non al mouseover -->
+                    <td><span ex:content=".Entrate"></span></td>
+                    <td><span ex:content=".Spese"></span></td>
                   </tr>
                 </table>
               </div>
