--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <span class="fa-stack">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1>
-                <h2>Scarica la tabella</h2>
+                <h2>Scarica il rapporto 2016</h2>
                 <br>
             </div>
         </div>
