--- a/infografiche.html
+++ b/infografiche.html
@@ -49,10 +49,10 @@
 
 
 
-  <link rel="exhibit/data" 
+  <!-- <link rel="exhibit/data" 
   type="application/jsonp"
   href="https://spreadsheets.google.com/feeds/cells/1VsQyMg7OlgPjyY_NsxUpjZ2ZzzElZtohALaYvAoj2EU/3/public/basic?alt=json-in-script"
-  ex:converter="googleSpreadsheets" />
+  ex:converter="googleSpreadsheets" /> -->
   <script src="./js/dist/exhibit-api.js?locale=it"></script>
   <script type="text/javascript">
   var tableStyler = function(table, database) {
