--- a/welfare.html
+++ b/welfare.html
@@ -160,7 +160,7 @@
 
             </div>
           </div> 
-<img src='http://lorempixel.com/400/200/technics/'>
+<!-- <img src='http://lorempixel.com/400/200/technics/'> -->
      
 
      </div>
